link jump crop heading bug fix

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -36,8 +36,8 @@ h2 {
 }
 
 .section {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+ padding-top: 4rem;
+
 }
 
 h2 {
